* factored out "findRequiredWebApplicationContext" method from *ActionSupport to DelegatingActionUtils for Struts
* added "bindingErrorProcessor" property to BaseCommandController, for declaratively overriding DataBinder's default
* Velocity and FreeMarker form macros include an "id" attribute on each element


Changes in version 1.2.5 (23.9.2005)
------------------------------------

Package org.springframework.aop
* added overloaded "getProxy" method with an explicit ClassLoader argument to ProxyFactory
* added protected "Object getProxy(AopProxy)" hook to ProxyFactoryBean, for specifying a custom class loader
* modified AbstractAutoProxyCreator to defer setting of the frozen flag until *after* advice has been applied (SPR-1250)
* lowered Cglib2AopProxy's log level for detected final methods on a proxy class from "warn" to "info"

Package org.springframework.beans
* fixed BeanWrapperImpl's "getPropertyType" implementation to avoid potential NPE in case of no custom editors
* AbstractFactoryBean implements DisposableBean and calls the "destroyInstance(Object)" template method for a singleton
* AbstractBeanFactory logs singleton creation at debug level rather than info level
* fixed AbstractBeanFactory to validate merged bean definition, properly preparing inherited method overrides
* AbstractAutowireCapableBeanFactory considers CGLIB-overridden bean properties as eligible for dependency checking too

Package org.springframework.core
* refactored AbstractPathResolvingPropertyEditor into SystemPropertyUtils.resolvePlaceholders(text) helper method
* refined PathMatchingResourcePatternResolver's jar entry matching to handle the zip protocol as well
* fixed ResourceArrayPropertyEditor to include the original IOException message if resource pattern resolution failed
* added LocalizedResourceHelper class, factored out from AbstractExcelView and AbstractJExcelView

Package org.springframework.context